--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-48eb8f4-20240822",
     "postcss": "^8.4.38",
     "query-string": "^9.0.0",
     "react": "19.0.0-rc-e684ca66ab-20240619",
     "react-dom": "19.0.0-rc-e684ca66ab-20240619",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.23.1",
+    "scss": "^0.2.4",
     "tailwindcss": "^3.4.4",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass-embedded": "^1.77.8",
     "vite": "^5.2.0"
   },
   "overrides": {
