--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "vite --port=8112",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.23.1",
     "scss": "^0.2.4",
+    "socket.io-client": "^4.8.0",
     "tailwindcss": "^3.4.4",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
