--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite --port=8112",
+    "start": "vite --port=8113",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,12 +13,15 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
     "babel-plugin-react-compiler": "^0.0.0-experimental-48eb8f4-20240822",
+    "dompurify": "^3.1.7",
     "postcss": "^8.4.38",
     "query-string": "^9.0.0",
     "react": "19.0.0-rc-e684ca66ab-20240619",
     "react-dom": "19.0.0-rc-e684ca66ab-20240619",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
+    "remark-gfm": "^4.0.0",
     "scss": "^0.2.4",
     "socket.io-client": "^4.8.0",
     "tailwindcss": "^3.4.4",
