--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.4",
     "babel-plugin-react-compiler": "^0.0.0-experimental-48eb8f4-20240822",
     "dompurify": "^3.1.7",
+    "highlight.js": "^11.10.0",
     "postcss": "^8.4.38",
     "query-string": "^9.0.0",
     "react": "19.0.0-rc-e684ca66ab-20240619",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
     "scss": "^0.2.4",
     "socket.io-client": "^4.8.0",
