--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
     "babel-plugin-react-compiler": "^0.0.0-experimental-48eb8f4-20240822",
+    "babel-polyfill": "^6.26.0",
     "dompurify": "^3.1.7",
     "highlight.js": "^11.10.0",
     "postcss": "^8.4.38",
@@ -22,6 +26,7 @@
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
     "scss": "^0.2.4",
